fixed button width on mobile devices

--- a/src/scss/blocks/_contacts.scss
+++ b/src/scss/blocks/_contacts.scss
@@ -54,7 +54,7 @@
             text-transform: uppercase;
             font-size: 18px;
             letter-spacing: 2px;
-            width: 244px;
+            width: 100%;
             height: 53px;
             background-color: #6eeee4;
             border-radius: 2px;
@@ -64,6 +64,9 @@
             transition: all 0.3s ease-in-out;
             &:hover {
                 background-color: #fff;
+            }
+            @include containerMedia {
+                width: 244px;
             }
         }
 
